# resume

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: build-cv.yml
LaTeX/: tex_resume.py
cv/: CNAME  build.py  cv.md
cv/styles/: cv.css
cv/templates/: cv.html.j2  cv.tex
