[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-resume"
version = "0.1.0"
description = "Markdown-as-source-of-truth CV publishing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]
